# timezone-abbreviations

./: Cargo.toml  README.md  content.txt  generate.py
src/: abbreviation.rs  generated.rs  lib.rs
